diger controllerlar eklendi

--- a/webBookReservation2/Views/Reservation/Index.cshtml
+++ b/webBookReservation2/Views/Reservation/Index.cshtml
@@ -30,10 +30,10 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.BookISBN)
+                @Html.DisplayFor(modelItem => item.Book.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.StudentId)
+                @Html.DisplayFor(modelItem => item.Student.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Doyoureserve)
