--- a/webBookReservation2/Views/Reservation/Delete.cshtml
+++ b/webBookReservation2/Views/Reservation/Delete.cshtml
@@ -8,23 +8,25 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
+    
     <h4>Reservation</h4>
     <hr />
     <dl class="dl-horizontal">
+       
         <dt>
-            @Html.DisplayNameFor(model => model.BookISBN)
+            @Html.DisplayNameFor(model => model.Book)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.BookISBN)
+            @Html.DisplayFor(model => model.Book.Title)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.StudentId)
+            @Html.DisplayNameFor(model => model.Student)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.StudentId)
+            @Html.DisplayFor(model => model.Student.Name)
         </dd>
 
         <dt>
@@ -47,8 +49,9 @@
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
-
+       
         <div class="form-actions no-color">
+            
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
