--- a/webBookReservation2/Views/Reservation/Details.cshtml
+++ b/webBookReservation2/Views/Reservation/Details.cshtml
@@ -11,19 +11,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.BookISBN)
+            @Html.DisplayNameFor(model => model.Book)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.BookISBN)
+            @Html.DisplayFor(model => model.Book.Title)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.StudentId)
+            @Html.DisplayNameFor(model => model.Student)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.StudentId)
+            @Html.DisplayFor(model => model.Student.Name)
         </dd>
 
         <dt>
